<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/action_profile"
        android:title="@string/action_icon_profile"
        android:icon="@drawable/boy"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_mode_logo"
        android:title="@string/action_icon"
        android:icon="@drawable/bluetooth_signal"
        app:showAsAction="always"/>

    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        app:showAsAction="never"/>

    <item android:id="@+id/action_chat_history"
        android:title="@string/chat_history"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_logout"
        android:title="@string/action_logout"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_exit"
        android:title="@string/action_exit"
        app:showAsAction="never"/>

</menu>