<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.omer.chat42.LoginActivity"
    android:background="@color/colorPrimaryDark">

    <TextView
        android:text="@string/choose_nick_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView_user_name"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/imageView_logo"
        android:layout_alignParentStart="true"
        android:textStyle="normal|bold"
        android:textSize="24dp"
        android:textColor="@android:color/background_light" />

    <TextView
        android:text="@string/choose_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView_user_gender"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/textView_user_name"
        android:layout_alignParentStart="true"
        android:textStyle="normal|bold"
        android:textSize="24dp"
        android:textColor="@android:color/background_light" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint=" Write here"
        android:ems="10"
        android:id="@+id/editText_user_name"
        android:layout_alignBaseline="@+id/textView_user_name"
        android:layout_alignBottom="@+id/textView_user_name"
        android:layout_toEndOf="@+id/textView_user_name"
        android:textAlignment="center"
        android:textSize="24dp"
        android:textColor="@android:color/background_dark"
        android:textStyle="normal|bold"
        android:background="@android:color/holo_orange_light" />

    <TextView
        android:text="@string/select_chat_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView_interest"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/textView_user_gender"
        android:layout_alignParentStart="true"
        android:textStyle="normal|bold"
        android:textSize="24dp"
        android:textColor="@android:color/background_light" />

    <TextView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text=" Just fot fun"
        android:textSize="24dp"
        android:textStyle="normal|bold"
        android:id="@+id/textView_list_interest"
        android:layout_alignBaseline="@+id/textView_interest"
        android:layout_alignBottom="@+id/textView_interest"
        android:textColor="@android:color/background_dark"
        android:layout_toEndOf="@+id/textView_user_name"
        android:textAlignment="center"
        android:background="@android:color/holo_orange_light" />

    <TextView
        android:text="@string/interest_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView_interest_in"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/textView_interest"
        android:layout_alignParentStart="true"
        android:textStyle="normal|bold"
        android:textSize="24dp"
        android:textColor="@android:color/background_light" />


    <CheckBox
        android:text="Male"
        android:textSize="24dp"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView_interest_in"
        android:layout_alignBottom="@+id/textView_interest_in"
        android:layout_toEndOf="@+id/textView_interest_in"
        android:textColor="@android:color/background_light"
        android:id="@+id/checkBox_male" />

    <CheckBox
        android:text="Female"
        android:textSize="24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView_interest_in"
        android:layout_alignBottom="@+id/textView_interest_in"
        android:layout_toEndOf="@+id/checkBox_male"
        android:layout_marginLeft="15dp"
        android:textColor="@android:color/background_light"
        android:id="@+id/checkBox_female" />
    <CheckBox
        android:text="Female"
        android:textSize="24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView_user_gender"
        android:layout_alignBottom="@+id/textView_user_gender"
        android:layout_toEndOf="@+id/checkBox_gender_male"
        android:layout_marginLeft="15dp"
        android:textColor="@android:color/background_light"
        android:id="@+id/checkBox_gender_female" />


    <CheckBox
        android:text="Male"
        android:textSize="24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView_user_gender"
        android:layout_alignBottom="@+id/textView_user_gender"
        android:layout_toEndOf="@+id/textView_user_gender"
        android:textColor="@android:color/background_light"
        android:id="@+id/checkBox_gender_male" />

    <TextView
        android:text="@string/profile_picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView_profile_pic"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/textView_interest_in"
        android:layout_centerHorizontal="true"
        android:textStyle="normal|bold"
        android:textSize="24dp"
        android:textColor="@android:color/background_light" />

    <ImageButton
        android:layout_width="120dp"
        android:layout_height="130dp"
        android:id="@+id/imageButton_profile_pic"
        android:layout_below="@id/textView_profile_pic"
        android:layout_marginTop="5dp"
        app:srcCompat="@drawable/users"
        android:scaleType="fitXY"
        android:layout_centerHorizontal="true"
        android:background="@android:color/transparent"
        android:padding="1dp"
        android:adjustViewBounds="false" />

    <Button
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="start"
        android:layout_centerHorizontal="true"
        android:id="@+id/imageButton_start"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:background="@android:color/holo_red_dark"
        android:textSize="24dp"
        android:textStyle="normal|bold"
        android:textColor="@android:color/background_light" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:srcCompat="@drawable/bluetooth_logo"
        android:id="@+id/imageView_logo"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="Chat 4.2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView_42logo"
        android:fontFamily="casual"
        android:textStyle="normal|bold"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="30dp"
        android:layout_below="@id/imageView_logo"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
